bbb.io-kernel (1.20250121.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/trixie/debian/control
+++ b/bbb.io-kernel/suite/trixie/debian/control
@@ -521,3 +521,12 @@ Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-6.12.1-bone6
 Description: BeagleBoard.org 6.12-bone for am335x
  This metapackage will install linux-image-6.12-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.13-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.13.0-bone6,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.13.0-bone6
+Description: BeagleBoard.org 6.13-bone for am335x
+ This metapackage will install linux-image-6.13-bone for am335x in Debian.
