bbb.io-kernel (1.20250204.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -815,17 +815,26 @@ Description: BeagleBoard.org 6.11-bone for am335x
 Package: bbb.io-kernel-6.12-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.12.10-bone9,
+Pre-Depends: linux-image-6.12.12-bone10,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.12.10-bone9
+Recommends: libpruio-modules-6.12.12-bone10
 Description: BeagleBoard.org 6.12-bone for am335x
  This metapackage will install linux-image-6.12-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.13-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.13.0-bone6,
+Pre-Depends: linux-image-6.13.1-bone7,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.13.0-bone6
+Recommends: libpruio-modules-6.13.1-bone7
 Description: BeagleBoard.org 6.13-bone for am335x
  This metapackage will install linux-image-6.13-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.14-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.14.0-rc1-bone1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.14.0-rc1-bone1
+Description: BeagleBoard.org 6.14-bone for am335x
+ This metapackage will install linux-image-6.14-bone for am335x in Debian.
