bbb.io-kernel (1.20250205.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bookworm/debian/control
+++ b/bbb.io-kernel/suite/bookworm/debian/control
@@ -416,6 +416,43 @@ Recommends:
 Description: BeagleBoard.org 6.6-ti-rt for am57xx
  This metapackage will install linux-image-6.6-ti-rt for am57xx in Debian.
 
+Package: bbb.io-kernel-6.12-ti
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.12.9-ti-arm32-r5
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.12.9-ti-arm32-r5
+Description: BeagleBoard.org 6.12-ti
+ This metapackage will install linux-image-6.12-ti in Debian.
+
+Package: bbb.io-kernel-6.12-ti-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.12.9-ti-arm32-r5
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.12.9-ti-arm32-r5
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 6.12-ti for am335x
+ This metapackage will install linux-image-6.12-ti for am335x in Debian.
+
+Package: bbb.io-kernel-6.12-ti-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.12.9-ti-arm32-r5
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.12.9-ti-arm32-r5
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 6.12-ti for am57xx
+ This metapackage will install linux-image-6.12-ti for am57xx in Debian.
+
 Package: bbb.io-kernel-5.10-bone
 Section: metapackages
 Architecture: armhf
