--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -506,6 +506,22 @@ Recommends: libpruio-modules-5.4.257-armv7-lpae-x68
 Description: BeagleBoard.org 5.4-armv7-lpae for armv7-lpae
  This metapackage will install linux-image-5.4-armv7-lpae for armv7-lpae in Debian.
 
+Package: bbb.io-kernel-omap2plus
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.14.0-rc2-omap2plus-r1
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Description: BeagleBoard.org Mainline
+ This metapackage will install Mainline in Debian.
+
+Package: bbb.io-kernel-multiv7
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.14.0-rc2-multiv7-r1
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Description: BeagleBoard.org Mainline
+ This metapackage will install Mainline in Debian.
+
 Package: bbb.io-kernel-5.10-bone
 Section: metapackages
 Architecture: armhf
@@ -833,8 +849,8 @@ Description: BeagleBoard.org 6.13-bone for am335x
 Package: bbb.io-kernel-6.14-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.14.0-rc1-bone2,
+Pre-Depends: linux-image-6.14.0-rc2-bone3,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.14.0-rc1-bone2
+Recommends: libpruio-modules-6.14.0-rc2-bone3
 Description: BeagleBoard.org 6.14-bone for am335x
  This metapackage will install linux-image-6.14-bone for am335x in Debian.
