--- a/bbb.io-kernel/suite/bookworm/debian/control
+++ b/bbb.io-kernel/suite/bookworm/debian/control
@@ -469,12 +469,21 @@ Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Description: BeagleBoard.org Mainline
  This metapackage will install Mainline in Debian.
 
+Package: bbb.io-kernel-5.4-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.4.288-bone69,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.4.288-bone69
+Description: BeagleBoard.org 5.4-bone for am335x
+ This metapackage will install linux-image-5.4-bone for am335x in Debian.
+
 Package: bbb.io-kernel-5.10-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.212-bone78,
+Pre-Depends: linux-image-5.10.233-bone79,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.212-bone78
+Recommends: libpruio-modules-5.10.233-bone79
 Description: BeagleBoard.org 5.10-bone for am335x
  This metapackage will install linux-image-5.10-bone for am335x in Debian.
 
@@ -505,12 +514,21 @@ Recommends: libpruio-modules-6.6.74-bone22
 Description: BeagleBoard.org 6.6-bone for am335x
  This metapackage will install linux-image-6.6-bone for am335x in Debian.
 
+Package: bbb.io-kernel-5.4-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.4.288-bone-rt-r69,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.4.288-bone-rt-r69
+Description: BeagleBoard.org 5.4-bone-rt for am335x
+ This metapackage will install linux-image-5.4-bone-rt for am335x in Debian.
+
 Package: bbb.io-kernel-5.10-bone-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.212-bone-rt-r78,
+Pre-Depends: linux-image-5.10.233-bone-rt-r79,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.212-bone-rt-r78
+Recommends: libpruio-modules-5.10.233-bone-rt-r79
 Description: BeagleBoard.org 5.10-bone-rt for am335x
  This metapackage will install linux-image-5.10-bone-rt for am335x in Debian.
 
@@ -541,12 +559,21 @@ Recommends: libpruio-modules-6.6.74-bone-rt-r22
 Description: BeagleBoard.org 6.6-bone-rt for am335x
  This metapackage will install linux-image-6.6-bone-rt for am335x in Debian.
 
+Package: bbb.io-kernel-5.4-armv7
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.4.288-armv7-x69,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.4.288-armv7-x69
+Description: BeagleBoard.org 5.4-armv7 for armv7
+ This metapackage will install linux-image-5.4-armv7 for armv7 in Debian.
+
 Package: bbb.io-kernel-5.10-armv7
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.212-armv7-x78,
+Pre-Depends: linux-image-5.10.233-armv7-x79,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.212-armv7-x78
+Recommends: libpruio-modules-5.10.233-armv7-x79
 Description: BeagleBoard.org 5.10-armv7 for armv7
  This metapackage will install linux-image-5.10-armv7 for armv7 in Debian.
 
@@ -577,12 +604,21 @@ Recommends: libpruio-modules-6.6.74-armv7-x22
 Description: BeagleBoard.org 6.6-armv7 for armv7
  This metapackage will install linux-image-6.6-armv7 for armv7 in Debian.
 
+Package: bbb.io-kernel-5.4-armv7-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.4.288-armv7-rt-x69,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.4.288-armv7-rt-x69
+Description: BeagleBoard.org 5.4-armv7-rt for armv7
+ This metapackage will install linux-image-5.4-armv7-rt for armv7 in Debian.
+
 Package: bbb.io-kernel-5.10-armv7-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.212-armv7-rt-x78,
+Pre-Depends: linux-image-5.10.233-armv7-rt-x79,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.212-armv7-rt-x78
+Recommends: libpruio-modules-5.10.233-armv7-rt-x79
 Description: BeagleBoard.org 5.10-armv7-rt for armv7
  This metapackage will install linux-image-5.10-armv7-rt for armv7 in Debian.
 
@@ -613,12 +649,21 @@ Recommends: libpruio-modules-6.6.74-armv7-rt-x22
 Description: BeagleBoard.org 6.6-armv7-rt for armv7
  This metapackage will install linux-image-6.6-armv7-rt for armv7 in Debian.
 
+Package: bbb.io-kernel-5.4-armv7-lpae
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.4.288-armv7-lpae-x69,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.4.288-armv7-lpae-x69
+Description: BeagleBoard.org 5.4-armv7-lpae for armv7-lpae
+ This metapackage will install linux-image-5.4-armv7-lpae for armv7-lpae in Debian.
+
 Package: bbb.io-kernel-5.10-armv7-lpae
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.212-armv7-lpae-x78,
+Pre-Depends: linux-image-5.10.233-armv7-lpae-x79,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.212-armv7-lpae-x78
+Recommends: libpruio-modules-5.10.233-armv7-lpae-x79
 Description: BeagleBoard.org 5.10-armv7-lpae for armv7-lpae
  This metapackage will install linux-image-5.10-armv7-lpae for armv7-lpae in Debian.
 
