bb-u-boot-am335x-evm (2022.04.20240115.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-u-boot-am335x-evm-debian-11-ubuntu-2204/suite/bookworm/debian/rules
+++ b/bb-u-boot-am335x-evm-debian-11-ubuntu-2204/suite/bookworm/debian/rules
@@ -5,19 +5,21 @@
 export DH_VERBOSE=1
 
 #U-Boot
-UB_CONFIG=am335x_evm
-UB_BRANCH=v2022.04-bbb.io-am335x-am57xx
-UB_REPO="https://openbeagle.org/beagleboard/u-boot.git"
+UBOOT_CFG="am335x_evm_defconfig"
+UB_TAG="v2022.04-bbb.io-am335x-am57xx"
+UB_REPO="https://github.com/beagleboard/u-boot.git"
 
 override_dh_strip:
 	# Just disable for now...
 
 override_dh_auto_configure:
 	mkdir -p ./tmp/pkg/
-	mkdir -p ./tmp/u-boot/ ; git -c http.sslVerify=false clone -b $(UB_BRANCH) $(UB_REPO) --depth=5 ./tmp/u-boot/ ; git --git-dir ./tmp/u-boot/.git log --pretty=oneline
-	make -C ./tmp/u-boot -j1 ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- $(UB_CONFIG)_defconfig
+	mkdir -p ./tmp/u-boot/ ; git -c http.sslVerify=false clone -b $(UB_TAG) $(UB_REPO) --depth=5 ./tmp/u-boot/ ; git --git-dir ./tmp/u-boot/.git log --pretty=oneline
+	make -C ./tmp/u-boot -j1 ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- $(UBOOT_CFG)
 	make -C ./tmp/u-boot -j2 ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf-
+	ls -lha ./tmp/u-boot/spl/
 	ls -lha ./tmp/u-boot/
+	cp -v ./tmp/u-boot/spl/u-boot-spl.bin ./tmp/pkg/
 	cp -v ./tmp/u-boot/MLO ./tmp/pkg/
 	cp -v ./tmp/u-boot/u-boot-dtb.img ./tmp/pkg/
 
