--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -416,6 +416,43 @@ Recommends:
 Description: BeagleBoard.org 6.6-ti-rt for am57xx
  This metapackage will install linux-image-6.6-ti-rt for am57xx in Debian.
 
+Package: bbb.io-kernel-6.12-ti
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.12.13-ti-arm32-r6
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.12.13-ti-arm32-r6
+Description: BeagleBoard.org 6.12-ti
+ This metapackage will install linux-image-6.12-ti in Debian.
+
+Package: bbb.io-kernel-6.12-ti-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.12.13-ti-arm32-r6
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.12.13-ti-arm32-r6
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 6.12-ti for am335x
+ This metapackage will install linux-image-6.12-ti for am335x in Debian.
+
+Package: bbb.io-kernel-6.12-ti-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.12.13-ti-arm32-r6
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.12.13-ti-arm32-r6
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 6.12-ti for am57xx
+ This metapackage will install linux-image-6.12-ti for am57xx in Debian.
+
 Package: bbb.io-kernel-4.19-bone
 Section: metapackages
 Architecture: armhf
@@ -464,7 +501,7 @@ Description: BeagleBoard.org 4.19-armv7-lpae for armv7-lpae
 Package: bbb.io-kernel-omap2plus
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.14.0-rc4-omap2plus-r1
+Pre-Depends: linux-image-6.14.0-rc5-omap2plus-r1
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Description: BeagleBoard.org Mainline
  This metapackage will install Mainline in Debian.
@@ -472,7 +509,7 @@ Description: BeagleBoard.org Mainline
 Package: bbb.io-kernel-multiv7
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.14.0-rc4-multiv7-r1
+Pre-Depends: linux-image-6.14.0-rc5-multiv7-r1
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Description: BeagleBoard.org Mainline
  This metapackage will install Mainline in Debian.
@@ -849,8 +886,8 @@ Description: BeagleBoard.org 6.13-bone for am335x
 Package: bbb.io-kernel-6.14-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.14.0-rc4-bone5,
+Pre-Depends: linux-image-6.14.0-rc5-bone6,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.14.0-rc4-bone5
+Recommends: libpruio-modules-6.14.0-rc5-bone6
 Description: BeagleBoard.org 6.14-bone for am335x
  This metapackage will install linux-image-6.14-bone for am335x in Debian.
