--- a/bbb.io-kernel/suite/jammy/debian/control
+++ b/bbb.io-kernel/suite/jammy/debian/control
@@ -292,7 +292,7 @@ Description: BeagleBoard.org 6.12-ti for am57xx
 Package: bbb.io-kernel-omap2plus
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.14.0-rc7-omap2plus-r1
+Pre-Depends: linux-image-6.14.0-omap2plus-r1
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Description: BeagleBoard.org Mainline
  This metapackage will install Mainline in Debian.
@@ -300,7 +300,7 @@ Description: BeagleBoard.org Mainline
 Package: bbb.io-kernel-multiv7
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.14.0-rc7-multiv7-r1
+Pre-Depends: linux-image-6.14.0-multiv7-r1
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Description: BeagleBoard.org Mainline
  This metapackage will install Mainline in Debian.
@@ -530,6 +530,15 @@ Recommends: libpruio-modules-6.6.77-armv7-lpae-x23
 Description: BeagleBoard.org 6.6-armv7-lpae for armv7-lpae
  This metapackage will install linux-image-6.6-armv7-lpae for armv7-lpae in Debian.
 
+Package: bbb.io-kernel-6.12-armv7-lpae
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.12.21-armv7-lpae-x1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.12.21-armv7-lpae-x1
+Description: BeagleBoard.org 6.12-armv7-lpae for armv7-lpae
+ This metapackage will install linux-image-6.12-armv7-lpae for armv7-lpae in Debian.
+
 Package: bbb.io-kernel-5.19-bone
 Section: metapackages
 Architecture: armhf
@@ -623,26 +632,26 @@ Description: BeagleBoard.org 6.11-bone for am335x
 Package: bbb.io-kernel-6.12-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.12.16-bone16,
+Pre-Depends: linux-image-6.12.21-bone17,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.12.16-bone16
+Recommends: libpruio-modules-6.12.21-bone17
 Description: BeagleBoard.org 6.12-bone for am335x
  This metapackage will install linux-image-6.12-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.13-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.13.7-bone12,
+Pre-Depends: linux-image-6.13.8-bone13,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.13.7-bone12
+Recommends: libpruio-modules-6.13.8-bone13
 Description: BeagleBoard.org 6.13-bone for am335x
  This metapackage will install linux-image-6.13-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.14-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.14.0-rc7-bone7,
+Pre-Depends: linux-image-6.14.0-bone8,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.14.0-rc7-bone7
+Recommends: libpruio-modules-6.14.0-bone8
 Description: BeagleBoard.org 6.14-bone for am335x
  This metapackage will install linux-image-6.14-bone for am335x in Debian.
